[gd_scene load_steps=7 format=3 uid="uid://dfmoofk40w4l2"]

[ext_resource type="Script" path="res://Chapters/Chapter 1/UI Components/scripts/death_screen.gd" id="1_snkc1"]
[ext_resource type="Shader" path="res://shaders/Baltro.gdshader" id="2_635s1"]
[ext_resource type="FontFile" uid="uid://b4lue4d84htb2" path="res://Fonts/child-witch-font/ChildWitch-z8ABL.ttf" id="3_xbb46"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aq6tb"]
shader = ExtResource("2_635s1")
shader_parameter/polar_coordinates = false
shader_parameter/polar_center = Vector2(0.5, 0.5)
shader_parameter/polar_zoom = 1.0
shader_parameter/polar_repeat = 1.0
shader_parameter/spin_rotation = null
shader_parameter/spin_speed = 3.0
shader_parameter/offset = Vector2(0, 0)
shader_parameter/colour_1 = Color(0.498039, 0.792157, 0.945098, 0.807843)
shader_parameter/colour_2 = Color(0.145098, 0.368627, 0.466667, 0.807843)
shader_parameter/colour_3 = Color(0.160784, 0.215686, 0.329412, 0.807843)
shader_parameter/contrast = 1.0
shader_parameter/spin_amount = 0.2
shader_parameter/pixel_filter = 700.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b4sqp"]
bg_color = Color(0.0661299, 0.204824, 0.265431, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g7y27"]

[node name="DeathScreen" type="Node"]
script = ExtResource("1_snkc1")

[node name="PauseMenu" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_aq6tb")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.164706, 0.164706, 0.207843, 1)

[node name="Label" type="Label" parent="PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.472
anchor_right = 0.5
anchor_bottom = 0.472
offset_left = -373.0
offset_top = -142.76
offset_right = 373.0
offset_bottom = 142.24
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.605674, 1.31156e-06, 2.88785e-07, 1)
theme_override_fonts/font = ExtResource("3_xbb46")
theme_override_font_sizes/font_size = 300
text = "you died"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = 121.0
offset_right = 171.0
offset_bottom = 265.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Resume" type="Button" parent="PauseMenu/VBoxContainer"]
process_mode = 3
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_hover_color = Color(0.498039, 0.792157, 0.945098, 1)
theme_override_fonts/font = ExtResource("3_xbb46")
theme_override_font_sizes/font_size = 70
theme_override_styles/hover = SubResource("StyleBoxFlat_b4sqp")
theme_override_styles/normal = SubResource("StyleBoxEmpty_g7y27")
text = "try again"

[node name="Main Menu" type="Button" parent="PauseMenu/VBoxContainer"]
process_mode = 3
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_hover_color = Color(0.498039, 0.792157, 0.945098, 1)
theme_override_fonts/font = ExtResource("3_xbb46")
theme_override_font_sizes/font_size = 70
theme_override_styles/hover = SubResource("StyleBoxFlat_b4sqp")
theme_override_styles/normal = SubResource("StyleBoxEmpty_g7y27")
text = "main menu"

[connection signal="pressed" from="PauseMenu/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
